--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -155,6 +155,7 @@
     <Compile Include="WebServices\Client_Model\clientmodel_CauHoi.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_ChuDe.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_DangKy.cs" />
+    <Compile Include="WebServices\Client_Model\clientmodel_KhoaHoc_BaiGiang.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_ThongBao.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_HinhAnh.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_KhoaHoc.cs" />
@@ -164,6 +165,9 @@
     <Compile Include="WebServices\Iwcf_CauHoi.cs" />
     <Compile Include="WebServices\Iwcf_ChuDe.cs" />
     <Compile Include="WebServices\Iwcf_KhoaHoc.cs" />
+    <Compile Include="WebServices\Iwcf_KhoaHoc_BaiGiang.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="WebServices\Iwcf_NguoiDung.cs" />
     <Compile Include="WebServices\Iwcf_Quyen.cs" />
     <Compile Include="WebServices\Iwcf_TraLoi.cs" />
@@ -175,6 +179,10 @@
     </Compile>
     <Compile Include="WebServices\wcf_KhoaHoc.svc.cs">
       <DependentUpon>wcf_KhoaHoc.svc</DependentUpon>
+    </Compile>
+    <Compile Include="WebServices\wcf_KhoaHoc_BaiGiang.svc.cs">
+      <DependentUpon>wcf_KhoaHoc_BaiGiang.svc</DependentUpon>
+      <SubType>Code</SubType>
     </Compile>
     <Compile Include="WebServices\wcf_NguoiDung.svc.cs">
       <DependentUpon>wcf_NguoiDung.svc</DependentUpon>
@@ -437,6 +445,7 @@
     <Content Include="WebServices\wcf_CauHoi.svc" />
     <Content Include="WebServices\wcf_ChuDe.svc" />
     <Content Include="WebServices\wcf_KhoaHoc.svc" />
+    <Content Include="WebServices\wcf_KhoaHoc_BaiGiang.svc" />
     <Content Include="WebServices\wcf_NguoiDung.svc" />
     <Content Include="WebServices\wcf_Quyen.svc" />
     <Content Include="WebServices\wcf_TraLoi.svc" />
