--- a/LCTMoodle/Web.config
+++ b/LCTMoodle/Web.config
@@ -45,6 +45,45 @@
     </assemblyBinding>
   </runtime>
   <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="BaiVietBaiGiang_Bingding"
+                 closeTimeout="00:01:00"
+                 openTimeout="00:01:00" 
+                 receiveTimeout="00:10:00"
+                 sendTimeout="00:01:00"
+                 allowCookies="false" 
+                 bypassProxyOnLocal="false" 
+                 hostNameComparisonMode="StrongWildcard"
+                 maxBufferSize="5000000" 
+                 maxBufferPoolSize="524288" 
+                 maxReceivedMessageSize="5000000"
+                 messageEncoding="Text" 
+                 textEncoding="utf-8" 
+                 transferMode="Buffered"
+                 useDefaultWebProxy="true">
+          <readerQuotas maxDepth="32" 
+                        maxStringContentLength="8192" 
+                        maxArrayLength="16384"
+                        maxBytesPerRead="4096" 
+                        maxNameTableCharCount="16384"/>
+          <security mode="None">
+            <transport clientCredentialType="None" 
+                       proxyCredentialType="None"
+                       realm="" />
+            <message clientCredentialType="UserName" 
+                     algorithmSuite="Default" />
+          </security>
+        </binding>
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://moodle.lctgroup.org/"
+                binding="basicHttpBinding" 
+                bindingConfiguration="BaiVietBaiGiang_Bingding"
+                contract="LCTMoodle.WebServices.Iwcf_KhoaHoc_BaiGiang" 
+                name="BaiVietBaiGiang_Endpoint"/>
+    </client>
     <behaviors>
       <serviceBehaviors>
         <behavior name="">
