--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -516,7 +516,7 @@
     <Content Include="Views\HoiDap\_Item_CauHoi.cshtml" />
     <Content Include="Views\NguoiDung\Sua.cshtml" />
     <None Include="Properties\PublishProfiles\LCTMoodle.pubxml" />
-    <Content Include="Views\KhoaHoc\DanhSachThanhVien.cshtml" />
+    <Content Include="Views\KhoaHoc\ThanhVien.cshtml" />
     <Content Include="Views\ChuDe\QuanLy.cshtml" />
     <Content Include="Views\ChuDe\_Cay_Con_Item.cshtml" />
     <Content Include="Views\ChuDe\_Cay_Item.cshtml" />
