--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -195,7 +195,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="App_Data\DuLieuLoiNhan.sql" />
+    <Content Include="App_Data\DuLieuHanhDong.sql" />
     <Content Include="App_Data\DuLieuQuyen.sql" />
     <Content Include="App_Data\Nhap.sql" />
     <Content Include="bin\BUS.pdb" />
