--- a/DAOLayer/DAOLayer.csproj
+++ b/DAOLayer/DAOLayer.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoiNhanHanhDongDAO.cs" />
+    <Compile Include="HanhDongDAO.cs" />
     <Compile Include="GiaTriHoatDongDAO.cs" />
     <Compile Include="HoatDongDAO.cs" />
     <Compile Include="BaiVietTaiLieuDAO.cs" />
