--- a/Helper/Helpers.csproj
+++ b/Helper/Helpers.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="LCTHelper.cs" />
     <Compile Include="HoatDongHelper.cs" />
+    <Compile Include="CauHoiHelper.cs" />
     <Compile Include="NguoiDungHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuyenHelper.cs" />
