--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -568,6 +568,7 @@
     <Content Include="Views\Quyen\QuyenCuaToi.cshtml" />
     <Content Include="Views\TapTin\_Popup.cshtml" />
     <Content Include="Views\NguoiDung\DanhSachXacNhanThem.cshtml" />
+    <Content Include="Views\HoiDap\_LichSuCauHoi.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUSLayer\BUSLayer.csproj">
