--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -597,6 +597,7 @@
     <Content Include="Views\KhoaHoc\ThemThanhVien.cshtml" />
     <Content Include="Views\NguoiDung\DanhSachXacNhanThem.cshtml" />
     <Content Include="Views\HoiDap\_LichSuCauHoi.cshtml" />
+    <Content Include="Views\Quyen\_NhomQuyenCuaNguoiDung.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BUSLayer\BUSLayer.csproj">
