--- a/LCTMoodle/Web.config
+++ b/LCTMoodle/Web.config
@@ -5,7 +5,8 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="chuoiKetNoi_LCTMoodle" connectionString="Server=123.30.187.4; User ID=rtcmfraf_Moodle; Password=Mo0@g.c" />
+    <!--<add name="chuoiKetNoi_LCTMoodle" connectionString="Server=123.30.187.4; User ID=rtcmfraf_Moodle; Password=Mo0@g.c" />-->
+    <add name="chuoiKetNoi_LCTMoodle" connectionString="workstation id=lctmoodle.mssql.somee.com;packet size=4096;user id=lctmoodle;pwd=mqzO0)/!@3;data source=lctmoodle.mssql.somee.com;persist security info=False;initial catalog=lctmoodle" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
