--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -168,6 +168,7 @@
     <Compile Include="WebServices\Client_Model\clientmodel_KhoaHoc_DienDan_BinhLuan.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_NguoiDung.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_ThongBao.cs" />
+    <Compile Include="WebServices\Client_Model\clientmodel_ThongBao_List.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_TinNhan.cs" />
     <Compile Include="WebServices\Iwcf_CauHoi.cs" />
     <Compile Include="WebServices\Iwcf_CauHoi_TraLoi.cs" />
