--- a/LCTMoodle/Web.config
+++ b/LCTMoodle/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="chuoiKetNoi_LCTMoodle" connectionString="Server=123.30.187.4; User ID=rtcmfraf_Moodle; Password=Mo0@g.c" />
+    <add name="chuoiKetNoi_LCTMoodle" connectionString="Data Source=lctmoodle.mssql.somee.com;Initial Catalog=lctmoodle;Integrated Security=False;User ID=lctmoodle;Password=mqzO0)/!@3;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
