--- a/LCTMoodle/LCTMoodle.csproj
+++ b/LCTMoodle/LCTMoodle.csproj
@@ -154,6 +154,7 @@
     <Compile Include="LCTView\QuyenView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="LCTView\NguoiDungView.cs" />
+    <Compile Include="WebServices\Client_Model\clientmodel_CaNhan.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_CauHoi.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_CauHoi_TraLoi.cs" />
     <Compile Include="WebServices\Client_Model\clientmodel_ChuDe.cs" />
